istio-cel/enforce-sidecar-injection-namespace/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-sidecar-injection-namespace
status:
  ready: true
